fixed off-centered empty state

--- a/webapp/channels/src/sass/components/_emoticons.scss
+++ b/webapp/channels/src/sass/components/_emoticons.scss
@@ -485,6 +485,13 @@ $emoji-footer-height:  $emoji-footer-border-width + $emoji-half-height + $emoji-
     overflow-x: hidden;
     overflow-y: auto;
 
+    &:has(.no-results__wrapper) {
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     &.gif-picker__items {
         display: flex;
         height: 380px;
